--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,9 @@ log = "0.4.20"
 notify = "6.1.1"
 notify-debouncer-full = "0.3.1"
 notify-rust = "4.10.0"
+
+[profile.release]
+strip=true
+lto=true
+codegen-units=1
+opt-level="s"
