--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,4 +2,4 @@
 target ="x86_64-unknown-linux-gnu"
 
 [target.'cfg(target_os = "linux")']
-rustflags = ["-C", "linker=ld.lld", "-C", "relocation-model=static", "-C", "strip=symbols" ]
+rustflags = [ "-C", "relocation-model=static", "-C", "strip=symbols" ]
